welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: value lenth is not a member of Array[Int]
	if(nums.lenth==1){
                ^